--- a/gb/17/10/4/n9697492.md
+++ b/gb/17/10/4/n9697492.md
@@ -1,24 +1,24 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hcwqzq223/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hcwqzq223/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/hcwqzq223/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hcwqzq223/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/hcwqzq223/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hcwqzq223/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/hcwqzq223/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hcwqzq223/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/hcwqzq223/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hcwqzq223/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/hcwqzq223/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hcwqzq223/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/hcwqzq223/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hcwqzq223/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/hcwqzq223/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hcwqzq223/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/hcwqzq223/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/hcwqzq223/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hcwqzq223/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hcwqzq223/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hcwqzq223/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hcwqzq223/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hcwqzq223/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hcwqzq223/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hcwqzq223/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hcwqzq223/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hcwqzq223/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hcwqzq223/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hcwqzq223/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hcwqzq223/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hcwqzq223/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/hcwqzq223/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/hcwqzq223/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hcwqzq223/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hcwqzq223/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hcwqzq223/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hcwqzq223/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hcwqzq223/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hcwqzq223/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hcwqzq223/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hcwqzq223/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/hcwqzq223/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hcwqzq223/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hcwqzq223/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hcwqzq223/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/eizauy3553/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>台驻加代表处国庆酒会 逾70联邦议员参加</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2017/10/cuttingCake-600x400.jpg" />
 <h6>龚中诚代表夫妇与众议员共同切蛋糕，庆祝中华民国106岁生日，并祝贺台加友谊。（梁耀/大纪元）
 </h6>
 <hr>
-<p>【大纪元2017年10月04日讯】（大纪元记者梁耀采访报导）驻加拿大台北经济文化代表处10月3日晚于<ahref="https://github.com/hcwqzq223/djy/blob/master/gb/tag/%E6%B8%A5%E5%A4%AA%E5%8D%8E.md#1">渥太华</a>著名“城堡饭店”(Fairmont Chateau Laurier)举行庆祝中华民国106年国庆酒会，<ahref="https://github.com/hcwqzq223/djy/blob/master/gb/tag/%E9%BE%9A%E4%B8%AD%E8%AF%9A.md#1">龚中诚</a>代表夫妇主持。出席加国政要包括加台国会友协会长Judy Sgro等70余位联邦参众议员、外交团成员、各部会官员、学术、科技、企业、新闻及侨界友人约450人到场祝贺，场面盛大。</p>
-<figure id="attachment_9697548" style="width: 600px" class="wp-caption aligncenter"><img class="wp-image-9697548 size-large" src="https://i.epochtimes.com/assets/uploads/2017/10/LionDance-600x310.jpg" alt="LionDance" width="600" b="310" /><figcaption class="wp-caption-text">加首都<ahref="https://github.com/hcwqzq223/djy/blob/master/gb/tag/%E6%B8%A5%E5%A4%AA%E5%8D%8E.md#1">渥太华</a>中华民国106年<ahref="https://github.com/hcwqzq223/djy/blob/master/gb/tag/%E5%8F%8C%E5%8D%81.md#1">双十</a>国庆酒会在祥狮献瑞的锣鼓声中揭开序幕。（梁耀/大纪元）</figcaption></figure>
+<p>【大纪元2017年10月04日讯】（大纪元记者梁耀采访报导）驻加拿大台北经济文化代表处10月3日晚于<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E6%B8%A5%E5%A4%AA%E5%8D%8E.md#1">渥太华</a>著名“城堡饭店”(Fairmont Chateau Laurier)举行庆祝中华民国106年国庆酒会，<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E9%BE%9A%E4%B8%AD%E8%AF%9A.md#1">龚中诚</a>代表夫妇主持。出席加国政要包括加台国会友协会长Judy Sgro等70余位联邦参众议员、外交团成员、各部会官员、学术、科技、企业、新闻及侨界友人约450人到场祝贺，场面盛大。</p>
+<figure id="attachment_9697548" aria-describedby="caption-attachment-9697548" style="width: 600px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2017/10/LionDance-600x310.jpg" target="_blank" rel="noreferrer noopener"> <img class="wp-image-9697548 size-large" src="https://i.epochtimes.com/assets/uploads/2017/10/LionDance-600x310.jpg" alt="LionDance" width="600" b="310" /></a><figcaption id="caption-attachment-9697548" class="wp-caption-text">加首都<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E6%B8%A5%E5%A4%AA%E5%8D%8E.md#1">渥太华</a>中华民国106年<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%8F%8C%E5%8D%81.md#1">双十</a>国庆酒会在祥狮献瑞的锣鼓声中揭开序幕。（梁耀/大纪元）</figcaption></figure>
 <p>庆典特别邀请到台湾获奖舞蹈团——泰雅原舞工坊。舞蹈演员们现场表演了阿美族歌舞。活力四射的原住民歌舞仿佛把来宾们带到了美丽的宝岛台湾。来宾和演员们共同载歌载舞，在体验台湾传统文化的同时，迎接国庆日的到来。</p>
 <p>龚代表致词时先以法文、英文、中文、粤语、闽南语及客家话向来宾致意，并以英文致词，强调台湾是亚洲民主的灯塔，也是加拿大真正且具有价值的伙伴。台加不仅共享自由、民主、人权及法治价值，也在经贸上互补互利，民间交流密切。</p>
 <p>龚代表回顾了过去一年台加关系的进展，包括避免双重课税协定自2017年1月起正式生效；中断14年后，加拿大航空在今年6月恢复温哥华直飞台北的航线。</p>
 <p>龚代表接受采访时表示，过去一年里，台加关系发展平稳也有许多进展。这是基于共同的理念，他说：“以诚待人是加拿大和台湾的共同特色，诚恳、包容与同理心是民主化的特性，也是核心价值。在这样坚实基础上，很多事情就容易推进，因为有彼此的共性和信赖。”</p>
-<figure id="attachment_9697550" style="width: 600px" class="wp-caption aligncenter"><img class="wp-image-9697550 size-large" src="https://i.epochtimes.com/assets/uploads/2017/10/toast-600x370.jpg" alt="toast" width="600" b="370" /><figcaption class="wp-caption-text">龚代表夫妇与众议员共同举杯，祝贺台加友谊。（梁耀/大纪元）</figcaption></figure>
-<p>加拿大国会台加友协主席、国会议员Judy Sgro女士在接受采访时说：“像庆祝七一国庆节一样，许多加拿大人也在庆祝台湾的<ahref="https://github.com/hcwqzq223/djy/blob/master/gb/tag/%E5%8F%8C%E5%8D%81.md#1">双十</a>国庆节。我每次去台湾，都感叹台湾和加拿大的价值理念上惊人的相似之处，台湾真的是全世界民主的典范。我们分享的是共同的价值观和目标。”</p>
-<figure id="attachment_9697544" style="width: 468px" class="wp-caption aligncenter"><img class="wp-image-9697544" src="https://i.epochtimes.com/assets/uploads/2017/10/Gong-judySgro-1-600x505.jpg" alt="Gong-judySgro-1" width="468" b="347" /><figcaption class="wp-caption-text">国会台加友协主席、国会议员Judy Sgro女士和<ahref="https://github.com/hcwqzq223/djy/blob/master/gb/tag/%E9%BE%9A%E4%B8%AD%E8%AF%9A.md#1">龚中诚</a>代表合影留念。（梁耀/大纪元）</figcaption></figure>
+<figure id="attachment_9697550" aria-describedby="caption-attachment-9697550" style="width: 600px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2017/10/toast-600x370.jpg" target="_blank" rel="noreferrer noopener"> <img class="wp-image-9697550 size-large" src="https://i.epochtimes.com/assets/uploads/2017/10/toast-600x370.jpg" alt="toast" width="600" b="370" /></a><figcaption id="caption-attachment-9697550" class="wp-caption-text">龚代表夫妇与众议员共同举杯，祝贺台加友谊。（梁耀/大纪元）</figcaption></figure>
+<p>加拿大国会台加友协主席、国会议员Judy Sgro女士在接受采访时说：“像庆祝七一国庆节一样，许多加拿大人也在庆祝台湾的<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%8F%8C%E5%8D%81.md#1">双十</a>国庆节。我每次去台湾，都感叹台湾和加拿大的价值理念上惊人的相似之处，台湾真的是全世界民主的典范。我们分享的是共同的价值观和目标。”</p>
+<figure id="attachment_9697544" aria-describedby="caption-attachment-9697544" style="width: 468px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2017/10/Gong-judySgro-1-600x505.jpg" target="_blank" rel="noreferrer noopener"> <img class="wp-image-9697544" src="https://i.epochtimes.com/assets/uploads/2017/10/Gong-judySgro-1-600x505.jpg" alt="Gong-judySgro-1" width="468" b="347" /></a><figcaption id="caption-attachment-9697544" class="wp-caption-text">国会台加友协主席、国会议员Judy Sgro女士和<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E9%BE%9A%E4%B8%AD%E8%AF%9A.md#1">龚中诚</a>代表合影留念。（梁耀/大纪元）</figcaption></figure>
 <p>加拿大联邦众议院各党代表分别上台致词，祝贺中华民国国庆，并表达支持台加关系发展的坚定立场。龚代表夫妇与众议员共同举杯及切蛋糕，祝贺台加友谊。</p>
 <p>国会众议院助理副议长、国会议员Antony Rota接受记者采访时说：“台加关系非常友好，这种友谊在不断进展，今晚的庆典就是一个很明显的例子。台湾和加拿大有相似的文化和理念，比如人权和贸易方面，我们能够互相理解。”</p>
 <p>新民主党副党鞭Irene Mathyssen女士在发言中说：“作为一个民族，我们享有如此之多的共同点，包括让每个人生活得更加美好的愿望；对关爱社会上最弱势者会加强我们有力的理解……利用这个机会分享体验，彼此支持，对每个人建造更美好的世界很重要。”</p>
-<figure id="attachment_9697543" style="width: 600px" class="wp-caption aligncenter"><img class="wp-image-9697543 size-large" src="https://i.epochtimes.com/assets/uploads/2017/10/Dancers-1-600x381.jpg" alt="Dancers-1" width="600" b="381" /><figcaption class="wp-caption-text">泰雅原舞工坊的舞蹈演员们表演了阿美族舞蹈。（梁耀/大纪元）</figcaption></figure>
+<figure id="attachment_9697543" aria-describedby="caption-attachment-9697543" style="width: 600px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2017/10/Dancers-1-600x381.jpg" target="_blank" rel="noreferrer noopener"> <img class="wp-image-9697543 size-large" src="https://i.epochtimes.com/assets/uploads/2017/10/Dancers-1-600x381.jpg" alt="Dancers-1" width="600" b="381" /></a><figcaption id="caption-attachment-9697543" class="wp-caption-text">泰雅原舞工坊的舞蹈演员们表演了阿美族舞蹈。（梁耀/大纪元）</figcaption></figure>
 <p>泰雅原舞团长黄雅玲女士说：“我们的舞团是多元文化族群的融合，但是我们出来演出代表的不是族群，而是台湾。我们很高兴能让加拿大人认识台湾。”</p>
 <p>酒会还为嘉宾提供了刈包、盐酥鸡、珍珠奶茶、月饼等台湾美食，以及多种口味的台湾啤酒、高梁酒及噶玛兰威士忌，宾主尽欢。#</p>
 <p>责任编辑：岳东卿</p>
@@ -27,41 +27,47 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/hcwqzq223/djy/blob/master/gb/15/10/7/n4544360.md#1">渥太华侨界庆双十 欢欣鼓舞</a></li>
-<li><a href="https://github.com/hcwqzq223/djy/blob/master/gb/14/10/10/n4269156.md#1">渥太华双十节庆典 政要赞台湾“民主典范”</a></li>
-<li><a href="https://github.com/hcwqzq223/djy/blob/master/gb/6/10/5/n1477166.md#1">渥太华侨界举行国庆餐会庆祝双十国庆</a></li>
-<li><a href="https://github.com/hcwqzq223/djy/blob/master/gb/5/10/7/n1078155.md#1">渥太华侨界举行盛大双十国庆餐会</a></li>
-<li><a href="https://github.com/hcwqzq223/djy/blob/master/gb/2/8/26/n210842.md#1">渥太华侨界举行双十国庆筹备会第二次会议</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/2/8/26/n210842.md#1">渥太华侨界举行双十国庆筹备会第二次会议</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/5/10/7/n1078155.md#1">渥太华侨界举行盛大双十国庆餐会</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/6/10/5/n1477166.md#1">渥太华侨界举行国庆餐会庆祝双十国庆</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/14/10/10/n4269156.md#1">渥太华双十节庆典 政要赞台湾“民主典范”</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/10/7/n4544360.md#1">渥太华侨界庆双十 欢欣鼓舞</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/12/28/n12649948.md#1">“太阳风”遭骇 揭中共核弹级网络攻击</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/7/19/n11396018.md#1">最新研究：流感疫苗对孕妇和胎儿有益</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/4/6/n11168225.md#1">渥大VR软件 助癌症病人“逃离”医院</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/10/24/n10805995.md#1">帮助龙卷风受灾家庭 魁省政府向红十字会增200万拨款</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/9/26/n10743824.md#1">加蒂诺选举 气候问题成焦点</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936755.md#1">【最新疫情3.13】川普：我和习都知病毒来源</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/2/n10015801.md#1" target="_blank">文武：中共篡政（一）</a></li><li><a href="https://github.com/hcwqzq223/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank">大陆见不到的震撼场面</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/9/17/n10720119.md#1" target="_blank">俞晓薇：迫害好人路不通 中共作恶者务必赎罪</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank">这些官员为何起诉江泽民</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/23/n11275879.md#1" target="_blank">林辉：中共对三千印度战俘进行红色洗脑</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/5/5/n10364709.md#1" target="_blank">修炼法轮功的中共军官们控告江泽民</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/hcwqzq223/djy/blob/master/gb/20/3/17/n11945722.md#1">【翻墙必看】官媒反常 批赵立坚“下作”？</a></li>
-<li><a href="https://github.com/hcwqzq223/djy/blob/master/gb/20/3/16/n11943195.md#1">日媒体人评台湾防疫2大功臣 第一名竟非陈时中</a></li>
-<li><a href="https://github.com/hcwqzq223/djy/blob/master/gb/20/3/17/n11946346.md#1">【现场视频】听信中共谎言 返京人挤爆机场</a></li>
-<li><a href="https://github.com/hcwqzq223/djy/blob/master/gb/20/3/17/n11946494.md#1">“训诫发哨人”官员被起底 传家人拥加国籍</a></li>
-<li><a href="https://github.com/hcwqzq223/djy/blob/master/gb/20/2/18/n11877949.md#1">古今中外预言中的2020年</a></li>
-<li><a href="https://github.com/hcwqzq223/djy/blob/master/gb/20/2/29/n11905232.md#1">蝗虫群攻官府异象 为何吃尽画像人头？</a></li>
-<li><a href="https://github.com/hcwqzq223/djy/blob/master/gb/20/3/11/n11933369.md#1">清朝学士三奇梦 是谁掌握他的一生？</a></li>
-<li><a href="https://github.com/hcwqzq223/djy/blob/master/gb/20/2/28/n11903572.md#1">末代国君的风范 顺从天意的元惠宗</a></li>
-<li><a href="https://github.com/hcwqzq223/djy/blob/master/gb/20/3/16/n11945071.md#1">【新闻看点】官媒忙降温？赵立坚及五毛被打脸</a></li>
-<li><a href="https://github.com/hcwqzq223/djy/blob/master/gb/20/3/16/n11943071.md#1">【现场视频】武汉医生揭中共关闭方舱内幕</a></li>
-<li><a href="https://github.com/hcwqzq223/djy/blob/master/gb/20/3/16/n11945291.md#1">蓬佩奥与杨洁篪通话 正告北京勿散怪诞谣言</a></li>
-<li><a href="https://github.com/hcwqzq223/djy/blob/master/gb/20/3/17/n11948158.md#1">【现场视频】湖北襄阳菜农夜色中卖菜</a></li>
-<li><a href="https://github.com/hcwqzq223/djy/blob/master/gb/20/3/17/n11945922.md#1">【拍案惊奇】武汉肺炎病毒被曝恐有夺命亚型</a></li>
-<li><a href="https://github.com/hcwqzq223/djy/blob/master/gb/20/3/17/n11947234.md#1">【直播回放】3.17新肺炎追踪：中美外交战</a></li>
-<li><a href="https://github.com/hcwqzq223/djy/blob/master/gb/20/3/17/n11946544.md#1">台歌仔戏国宝小凤仙病逝 享寿80岁　</a></li>
-<li><a href="https://github.com/hcwqzq223/djy/blob/master/gb/20/3/15/n11942589.md#1">赵立坚甩锅病毒源自美国 艺人黄秋生狠酸中共</a></li>
-<li><a href="https://github.com/hcwqzq223/djy/blob/master/gb/20/3/15/n11942781.md#1">潘迎紫呼吸道感染急就医 被要求检测新冠病毒</a></li>
-<li><a href="https://github.com/hcwqzq223/djy/blob/master/gb/20/3/15/n11942415.md#1">西班牙疫情大爆发 梁咏琪一家三口封城前返港</a></li>
-<li><a href="https://github.com/hcwqzq223/djy/blob/master/gb/20/3/16/n11945468.md#1">赵丽颖复工晒片场照 吊超高威亚压根看不到人</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/12/16/n13442125.md#1">【百年真相】云南省委书记案 138万人受牵连</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/12/21/n13451605.md#1">【百年真相】到底谁是特务？延安整风内幕</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/9/n13632196.md#1">【百年真相】三件大坏事 江泽民最想让人遗忘</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13671140.md#1">【未解之谜】沙中庞贝 楼兰之谜</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/16/n13649079.md#1">【人生之钥】败家子卖田地卖金玉 结局出人意料</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678895.md#1">【拍案惊奇】遇难者头七 东航空难变政治事件</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13679596.md#1">【远见快评】传普京重大让步 乌克兰中立秘辛</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/29/n13680017.md#1">吴明德：怕政权不稳 中共改行低成本动态清零</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13675009.md#1">五大战区部署歼-20 中共空军意欲何为</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13669168.md#1">配F-35C等舰载机 美福特号航母已准备好战斗</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674635.md#1">六四领袖被刺杀 FBI盯上中共间谍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676833.md#1">47岁林志玲产后首晒照 获赞“最美妈咪”</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678198.md#1">威尔史密斯奥斯卡台上打人 摘影帝后致歉落泪</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678918.md#1">大S具俊晔已在台湾完成登记 结婚纪念日选这天</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676987.md#1">威尔?史密斯上台搧颁奖人 杜汶泽一假设引共鸣</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13675982.md#1">《柏捷顿家族：名门韵事》第二季影评：三角恋难题 仍可圆满解决</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13677065.md#1">新筛查方法可查出95%一期胰腺癌</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13673047.md#1">搭机4点让旅途更安全 资深空姐：选飞机很重要</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/19/n13657423.md#1">吃对了肌肤就漂亮 10大食材为肌肤打底</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674013.md#1">吃奇异果不用削皮 连皮一起吃营养更加倍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676145.md#1">为什么新衣服在穿着之前要先洗涤？</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hcwqzq223/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hcwqzq223/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/17/10/4/n9697492.htm">台驻加代表处国庆酒会 逾70联邦议员参加</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/17/10/4/n9697492.htm">台驻加代表处国庆酒会 逾70联邦议员参加</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/hcwqzq223/djy/blob/master/gb/17/10/4/n9697492.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hcwqzq223/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hcwqzq223/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hcwqzq223/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hcwqzq223/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hcwqzq223/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hcwqzq223/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hcwqzq223/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hcwqzq223/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hcwqzq223/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hcwqzq223/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hcwqzq223/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hcwqzq223/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hcwqzq223/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hcwqzq223/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hcwqzq223/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hcwqzq223/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hcwqzq223/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hcwqzq223/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/hcwqzq223/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hcwqzq223/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hcwqzq223/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hcwqzq223/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hcwqzq223/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hcwqzq223/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/hcwqzq223/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hcwqzq223/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hcwqzq223/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hcwqzq223/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hcwqzq223/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hcwqzq223/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hcwqzq223/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hcwqzq223/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hcwqzq223/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hcwqzq223/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hcwqzq223/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hcwqzq223/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hcwqzq223/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hcwqzq223/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hcwqzq223/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hcwqzq223/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hcwqzq223/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hcwqzq223/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hcwqzq223/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hcwqzq223/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hcwqzq223/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hcwqzq223/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hcwqzq223/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hcwqzq223/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/eizauy3553/djy/blob/master/gb/17/10/4/n9697492.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
